# stateofsysmlv2tools

./: .cruft.json  README.md  pyproject.toml
sysml/models/: stateoftools.sysml
