[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "StateOfSysmlV2Tools"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = ""
keywords = []
authors = [
  { name = "Sean Bell", email = "smb@github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/forgen/stateofsysmlv2tools#readme"
Issues = "https://github.com/forgen/stateofsysmlv2tools/issues"
Source = "https://github.com/forgen/stateofsysmlv2tools"

[tool.hatch.version]
path = "src/stateofsysmlv2tools/__about__.py"

[tool.hatch.envs.sysml]
path = ".venv/sysml"
dependencies = [
  "jupyter",
]

[tool.hatch.envs.sysml.scripts]
update-kernel = "python3 ./sysml/jupyter-sysml-kernel/install.py --sys-prefix"
create-user-sysml-symlink = "cd .venv/sysml/share/jupyter/kernels/sysml/sysml.library/Domain\\ Libraries && ln -sFf ../../../../../../../../sysml/models user_models"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/stateofsysmlv2tools tests}"

[tool.coverage.run]
source_pkgs = ["stateofsysmlv2tools", "tests"]
branch = true
parallel = true
omit = [
  "src/stateofsysmlv2tools/__about__.py",
]

[tool.coverage.paths]
stateofsysmlv2tools = ["src/stateofsysmlv2tools", "*/stateofsysmlv2tools/src/stateofsysmlv2tools"]
tests = ["tests", "*/stateofsysmlv2tools/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
